# aidbg

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aidbg/: cli.py  config.py  init.py  prompt.py  runner.py  trigger.py
aidbg/context/: collector.py  dependencies.py  environment.py  project_tree.py
aidbg/languages/: base.py  go.py  java.py  javascript.py  python.py  resolver.py
aidbg/llm/: base.py  groq.py  ollama.py  openai.py
aidbg/logic/: __init__.py  complexity.py  token_budget.py
examples/: Test.java  test.go  test.js  test_app.py
tests/: test_config.py  test_runner.py  test_trigger.py
