[project]
name = "aidbg"
version = "0.1.3"
description = "Local-first CLI AI debugger for Python projects"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Kumar Nihal", email = "nihalpandey1205@email.com" }
]

keywords = [
  "ai debugger",
  "python debugger",
  "llm debugging",
  "cli tool",
  "local-first ai",
  "traceback analyzer"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Debuggers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
groq = ["groq>=0.4.0"]
openai = ["openai>=1.0.0"]
ollama = ["requests>=2.31.0"]

dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/KNIHAL/aidbg"
Repository = "https://github.com/KNIHAL/aidbg"
Issues = "https://github.com/KNIHAL/aidbg/issues"

[project.scripts]
aidbg = "aidbg.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aidbg*"]
exclude = ["tests*", "examples*", "docs*"]
